Fix spacing and break points in question creation

--- a/client/src/styles/custom.scss
+++ b/client/src/styles/custom.scss
@@ -7,7 +7,7 @@
 }
 
 .btn-frequency {
-  min-height: 86px;
+  min-height: 120px;
 }
 
 @include media-breakpoint-up(sm) {
@@ -16,6 +16,12 @@
   }
 
   .btn-frequency {
-    min-height: 60px;
+    min-height: 70px;
+  }
+}
+
+@include media-breakpoint-up(md) {
+  .btn-frequency {
+    min-height: 50px;
   }
 }
